--- a/adminuser/files/sb-admin1/tables.html
+++ b/adminuser/files/sb-admin1/tables.html
@@ -333,6 +333,7 @@
                                         <tr>
                                             <th>NIS</th>
                                             <th>Bulan Bayar</th>
+                                            <th>Tanggal Bayar</th>
                                             <th>Jumlah Bayar</th>
                                             <th>Status</th>
                                             <th>Sisa</th>
@@ -342,6 +343,7 @@
                                         <tr>
                                             <td>123456  </td>
                                             <td>September</td>
+                                            <th>12-09-2020</th>
                                             <td>Rp 100.000,00</td>
                                             <td>Lunas</td>
                                             <td>Rp 1.100.000,00</td>
@@ -349,6 +351,7 @@
                                         <tr>
                                             <td>123456 </td>
                                             <td>Oktober</td>
+                                            <th>12-10-2020</th>
                                             <td>Rp 100.000,00</td>
                                             <td>Lunas</td>
                                             <td>Rp 1.000.000,00</td>
@@ -356,6 +359,7 @@
                                         <tr>
                                             <td>123456  </td>
                                             <td>November</td>
+                                            <th>12-11-2020</th>
                                             <td>Rp 100.000,00</td>
                                             <td>Lunas</td>
                                             <td>Rp 900.000,00</td>
@@ -363,6 +367,7 @@
                                         <tr>
                                             <td>123456  </td>
                                             <td>Desember</td>
+                                            <th>12-12-2020</th>
                                             <td>Rp 100.000,00</td>
                                             <td>Lunas</td>
                                             <td>Rp 800.000,00</td>
@@ -370,6 +375,7 @@
                                         <tr>
                                             <td>123456  </td>
                                             <td>Januari</td>
+                                            <th>12-01-2021</th>
                                             <td>Rp 100.000,00</td>
                                             <td>Lunas</td>
                                             <td>Rp 700.000,00</td>
@@ -377,6 +383,7 @@
                                         <tr>
                                             <td>123456  </td>
                                             <td>Februari</td>
+                                            <th>12-02-2021</th>
                                             <td>Rp 100.000,00</td>
                                             <td>Lunas</td>
                                             <td>Rp100.000,00</td>
