--- a/adminuser/files/sb-admin1/tables.html
+++ b/adminuser/files/sb-admin1/tables.html
@@ -61,24 +61,16 @@
 
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
-
                 <a class="nav-link" href="myprofile.php">
                     <i class="fas fa-fw fa-user"></i>
                     <span>My Profile</span></a>
             </li>
 
             <!-- Nav Item - Tables -->
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a class="nav-link" href="tables.html">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Data Pembayaran</span></a>
-            </li>
-
-            <!-- Nav Item - Kalender -->
-            <li class="nav-item">
-                <a class="nav-link" href="kalender.html">
-                    <i class="fas fa-fw fa-table"></i>
-                    <span>Kalender</span></a>
             </li>
 
             <!-- Divider -->
@@ -307,84 +299,43 @@
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
 
-                    <!-- Page Heading -->
-                    <h1 class="h3 mb-2 text-gray-800">Data Pembayaran SPP</h1>
-
                     <!-- DataTales Tables -->
                     <div class="card shadow mb-4">
                         <div class="card-header py-3">
-                            <a href="bayar.html" class="btn btn-success btn-icon-split">
-                                <span class="icon text-white-50">
-                                    <i class="fas fa-arrow-right"></i>
-                                </span>
-                                <span class="text">Bayar</span>
-                            </a>
+                            <h5 class="m-0 font-weight-bold text-primary">Data Pembayaran SPP</h5>
                         </div>
                         <div class="card-body">
                             <div class="table-responsive">
                                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                                    <thead>
+                                    <thead class="text-center thead-light">
                                         <tr>
-                                            <th>NIS</th>
-                                            <th>Bulan Bayar</th>
-                                            <th>Tanggal Bayar</th>
-                                            <th>Jumlah Bayar</th>
-                                            <th>Status</th>
-                                            <th>Sisa</th>
+                                            <th scope="col">Bulan Bayar</th>
+                                            <th scope="col">No Pembayaran</th>
+                                            <th scope="col">Tanggal Pembayaran</th>
+                                            <th scope="col">Jumlah Bayar</th>
+                                            <th scope="col">Sisa</th>
+                                            <th scope="col">Status</th>
+                                            <th scope="col">Aksi</th>
                                         </tr>
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td>123456  </td>
                                             <td>September</td>
-                                            <th>12-09-2020</th>
+                                            <td class="text-center">123456</td>
+                                            <th class="text-center">12-09-2020</th>
                                             <td>Rp 100.000,00</td>
-                                            <td>Lunas</td>
                                             <td>Rp 1.100.000,00</td>
-                                        </tr>
-                                        <tr>
-                                            <td>123456 </td>
-                                            <td>Oktober</td>
-                                            <th>12-10-2020</th>
-                                            <td>Rp 100.000,00</td>
-                                            <td>Lunas</td>
-                                            <td>Rp 1.000.000,00</td>
-                                        </tr>
-                                        <tr>
-                                            <td>123456  </td>
-                                            <td>November</td>
-                                            <th>12-11-2020</th>
-                                            <td>Rp 100.000,00</td>
-                                            <td>Lunas</td>
-                                            <td>Rp 900.000,00</td>
-                                        </tr>
-                                        <tr>
-                                            <td>123456  </td>
-                                            <td>Desember</td>
-                                            <th>12-12-2020</th>
-                                            <td>Rp 100.000,00</td>
-                                            <td>Lunas</td>
-                                            <td>Rp 800.000,00</td>
-                                        </tr>
-                                        <tr>
-                                            <td>123456  </td>
-                                            <td>Januari</td>
-                                            <th>12-01-2021</th>
-                                            <td>Rp 100.000,00</td>
-                                            <td>Lunas</td>
-                                            <td>Rp 700.000,00</td>
-                                        </tr>
-                                        <tr>
-                                            <td>123456  </td>
-                                            <td>Februari</td>
-                                            <th>12-02-2021</th>
-                                            <td>Rp 100.000,00</td>
-                                            <td>Lunas</td>
-                                            <td>Rp100.000,00</td>
-                                        </tr>
-                                        
+                                            <td class="text-center">Lunas</td>
+                                            <td class="text-center">
+
+                                                <a href="bayar.html" class="btn btn-success btn-icon-split">
+                                                    <span class="text">Bayar</span>
+                                                </a>
+
+                                            </td>
+                                        </tr>                
                                     </tbody>
-                                </table>
+                                    </table>
                             </div>
                         </div>
                     </div>
