--- a/adminuser/files/sb-admin1/bayar.html
+++ b/adminuser/files/sb-admin1/bayar.html
@@ -68,8 +68,8 @@
             </li>
 
             <!-- Nav Item - Tables -->
-            <li class="nav-item">
-                <a class="nav-link" href="tables.html">
+            <li class="nav-item active">
+                <a class="nav-link active" href="tables.html">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Data Pembayaran</span></a>
             </li>
