--- a/adminuser/files/index.html
+++ b/adminuser/files/index.html
@@ -70,7 +70,7 @@
                                 <a href="#">Login</a>
                                 <ul class="sub-menu">
                                     <li><a href="sb-admin1/login.html">Login User</a></li>
-                                    <li><a href="sb-admin2/register.html">Login Admin</a></li>
+                                    <li><a href="sb-admin2/login.html">Login Admin</a></li>
                                     
                                 </ul><!-- /.sub-menu -->
                             </li>
