--- a/adminuser/files/sb-admin2/index.html
+++ b/adminuser/files/sb-admin2/index.html
@@ -8,8 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
 
-    <title>bayarSPP | USER</title>
+    <title>bayarSPP | ADMIN</title>
 
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
