--- a/adminuser/files/sb-admin1/bayar.html
+++ b/adminuser/files/sb-admin1/bayar.html
@@ -325,12 +325,12 @@
                             <div class="card-body">
                     <div class="form-group">
                         <label for="name">Nama Siswa</label>
-                        <input type="text" class="form-control" name="name"  placeholder="Masukan Nama Anda" value="<?php echo $row['name']; ?>">
+                        <input type="text" class="form-control" name="name"  value="<?php echo $row['name']; ?>">
                     </div>
 
                     <div class="form-group">
                       <label for="nisn">NISN</label>
-                      <input type="text" class="form-control" name="nisn"  placeholder="Masukan NISN Anda" value="<?php echo $row['nisn']; ?>">
+                      <input type="text" class="form-control" name="nisn" value="<?php echo $row['nisn']; ?>">
                     </div>
 
                     <div class="form-group">
