--- a/adminuser/files/sb-admin2/kalender.html
+++ b/adminuser/files/sb-admin2/kalender.html
@@ -81,6 +81,12 @@
                     <span>Kalender</span></a>
             </li>
 
+            <li class="nav-item">
+                <a class="nav-link" href="login.html">
+                    <i class="fas fa-fw fa-sign-out-alt"></i>
+                    <span>Logout</span></a>
+            </li>
+
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
 
