--- a/adminuser/files/sb-admin1/kalender.html
+++ b/adminuser/files/sb-admin1/kalender.html
@@ -82,7 +82,7 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="login.html">
+                <a class="nav-link" href="../index.html">
                     <i class="fas fa-fw fa-sign-out-alt"></i>
                     <span>Logout</span></a>
             </li>
