--- a/adminuser/files/sb-admin2/tables.html
+++ b/adminuser/files/sb-admin2/tables.html
@@ -85,7 +85,7 @@
         </li>
 
         <li class="nav-item">
-            <a class="nav-link" href="login.html">
+            <a class="nav-link" href="../index.html">
                 <i class="fas fa-fw fa-sign-out-alt"></i>
                 <span>Logout</span></a>
         </li>
