--- a/adminuser/files/index.html
+++ b/adminuser/files/index.html
@@ -8,7 +8,7 @@
     <title>bayarSPP | FreedomCode</title>
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/bayarSPP-5.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/bayarSPP-5.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/bayarSPP-5.png">
     <link rel="manifest" href="assets/images/favicons/site.webmanifest">
 
     <!-- plugin scripts -->
@@ -300,18 +300,6 @@
                 </div><!-- /.app-shot-one__carousel owl-theme owl-carousel -->
             </div><!-- /.container-fluid -->
         </section><!-- /.app-shot-one -->
-            <div class="col-lg-9">
-                <div class="testimonials-one__content">
-                    <p class="testimonials-one__text">This is due to their excellent service,
-                        competitive
-                        pricing and
-                        customer support. It’s throughly refresing to get such a personal touch.
-                    </p>
-
-                </div><!-- /.testimonials-one__content -->
-            </div><!-- /.col-lg-9 -->
-        </div><!-- /.row -->
-    </div><!-- /.swiper-slide -->
     
         <section class="pricing-one" id="pricing">
             <div class="container">
@@ -360,82 +348,6 @@
                 </div><!-- /.row -->
             </div><!-- /.container -->
 
-        <section class="blog-one blog-one__home thm-gray-bg" id="news">
-            <div class="container">
-                <div class="block-title text-center">
-                    <p class="block-title__tag-line">Checkout Latest Posts </p><!-- /.block-title__tag-line -->
-                    <h2 class="block-title__title">News & Articles</h2><!-- /.block-title__title -->
-                </div><!-- /.block-title -->
-                <div class="row">
-                    <div class="col-lg-4 col-md-12 col-sm-12 wow fadeInUp" data-wow-duration="1500ms">
-                        <div class="blog-one__single">
-                            <div class="blog-one__image">
-                                <img src="assets/images/blog-1-1.jpg" alt="">
-                                <a class="blog-one__more-link" href="blog-details.html"><i class="fa fa-link"></i>
-                                    <!-- /.fa fa-link --></a>
-                            </div><!-- /.blog-one__image -->
-                            <div class="blog-one__content">
-                                <ul class="list-unstyled blog-one__meta">
-                                    <li><a href="#">22 Oct, 2019</a></li>
-                                    <li><a href="#">2 Comments</a></li>
-                                </ul><!-- /.list-unstyled -->
-                                <h3 class="blog-one__title">
-                                    <a href="blog-details.html">Pre and post launch mobile app marketing pitfalls to
-                                        avoid</a>
-                                </h3><!-- /.blog-one__title -->
-                                <a href="blog-details.html" class="blog-one__link">Read More</a>
-                                <!-- /.blog-one__link -->
-                            </div><!-- /.blog-one__content -->
-                        </div><!-- /.blog-one__single -->
-                    </div><!-- /.col-lg-4 -->
-                    <div class="col-lg-4 col-md-12 col-sm-12 wow fadeInDown" data-wow-duration="1500ms">
-                        <div class="blog-one__single">
-                            <div class="blog-one__image">
-                                <img src="assets/images/blog-1-2.jpg" alt="">
-                                <a class="blog-one__more-link" href="blog-details.html"><i class="fa fa-link"></i>
-                                    <!-- /.fa fa-link --></a>
-                            </div><!-- /.blog-one__image -->
-                            <div class="blog-one__content">
-                                <ul class="list-unstyled blog-one__meta">
-                                    <li><a href="#">22 Oct, 2019</a></li>
-                                    <li><a href="#">2 Comments</a></li>
-                                </ul><!-- /.list-unstyled -->
-                                <h3 class="blog-one__title">
-                                    <a href="blog-details.html">It is all exactly as i said, but i don't like it let's
-                                        unpack
-                                        that</a>
-                                </h3><!-- /.blog-one__title -->
-                                <a href="blog-details.html" class="blog-one__link">Read More</a>
-                                <!-- /.blog-one__link -->
-                            </div><!-- /.blog-one__content -->
-                        </div><!-- /.blog-one__single -->
-                    </div><!-- /.col-lg-4 -->
-                    <div class="col-lg-4 col-md-12 col-sm-12 wow fadeInUp" data-wow-duration="1500ms">
-                        <div class="blog-one__single">
-                            <div class="blog-one__image">
-                                <img src="assets/images/blog-1-3.jpg" alt="">
-                                <a class="blog-one__more-link" href="blog-details.html"><i class="fa fa-link"></i>
-                                    <!-- /.fa fa-link --></a>
-                            </div><!-- /.blog-one__image -->
-                            <div class="blog-one__content">
-                                <ul class="list-unstyled blog-one__meta">
-                                    <li><a href="#">22 Oct, 2019</a></li>
-                                    <li><a href="#">2 Comments</a></li>
-                                </ul><!-- /.list-unstyled -->
-                                <h3 class="blog-one__title">
-                                    <a href="blog-details.html">I just wanted to give you a heads-up, or this you feel
-                                        you
-                                        would</a>
-                                </h3><!-- /.blog-one__title -->
-                                <a href="blog-details.html" class="blog-one__link">Read More</a>
-                                <!-- /.blog-one__link -->
-                            </div><!-- /.blog-one__content -->
-                        </div><!-- /.blog-one__single -->
-                    </div><!-- /.col-lg-4 -->
-                </div><!-- /.row -->
-            </div><!-- /.container -->
-        </section><!-- /.blog-one blog-one__home -->
-
         <section class="cta-one">
             <div class="container text-center">
                 <h3 class="block-title__title">Gunakan Sekarang!!<br>
@@ -458,7 +370,7 @@
                                 <p class="footer-widget__contact"><a href="tel:888-666-0000">888 666 0000</a></p>
                                 <!-- /.footer-widget__contact -->
                                 <p class="footer-widget__contact"><a
-                                        href="mailto:needhelp@example.com">needhelp@example.com</a>
+                                        href="mailto:needhelp@example.com">freedomcode@example.com</a>
                                 </p><!-- /.footer-widget__contact -->
                             </div><!-- /.footer-widget -->
                         </div><!-- /.col-lg-2 -->
@@ -494,7 +406,7 @@
                         </div><!-- /.col-lg-6 -->
                         <div class="col-lg-4">
                             <div class="footer-widget footer-widget__mailchimp">
-                                <h3 class="footer-widget__title">Subscribe</h3><!-- /.footer-widget__title -->
+                                <h3 class="footer-widget__title">Masukan Untuk Kami</h3><!-- /.footer-widget__title -->
                                 <form action="#" class="footer-widget__mc-form mc-form"
                                     data-url="https://xyz.us18.list-manage.com/subscribe/post?u=20e91746ef818cd941998c598&amp;id=cc0ee8140e">
                                     <input type="email" id="mc-email" class="formInput" placeholder="Email address">
